[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chasen"
version = "0.1.4"
description = "A little Python-based tea app"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Aspyn Shaughnessy" }]

# Only include *runtime* deps here
dependencies = [
  "tabulate==0.9.0",
]

[project.optional-dependencies]
# Install with: pip install .[dev]
dev = [
  "pytest==8.2.2",
  "black==24.4.2",
  "isort==5.13.2",
  "flake8==7.0.0",
]

# not yet implemented
planned = [
  "pandas==2.2.2",
  "python-dateutil==2.9.0",
  "pydantic==2.6.4",
  "rich==13.7.1",
  "APScheduler==3.10.4",
  "simpleaudio==1.0.4",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = ["chasen"]

[tool.setuptools.packages.find]
# Restrict package discovery so setuptools ignores the top-level 'data/' 'tests/' folders
# that are being mistaken for packages. Only include the 'chasen/' tree.
include = ["chasen*"]
exclude = ["tests*", "data*"]